Rename HTML file to 'lost.html'

--- a/src/pages/tools/html/lost.html
+++ b/src/pages/tools/html/lost.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta author="">
+    <meta author="GridView">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Missing clue.</title>
+    <meta name="description" content="Missing clue.">
+    <title>Top to bottom, right to left.</title>
     <style>
         body {
             width: 100vw;
